--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -364,3 +364,31 @@ mark,
   background: none !important;
   border: 1px solid #fff !important;
 }
+
+/* Dropdown Button */
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: block;
+}
+
+/* Links inside the dropdown */
+.dropdown-inside {
+  color: #555;
+  font-size: 14px;
+  font-weight: 400;
+  border-radius: 0;
+  margin: 9px 20px 0 20px;
+  text-decoration: none;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-inside a:hover {
+  color: #7c1333;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-menu {
+  display: block;
+}
