--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,8 +11,18 @@
               <li><%= link_to t(".portfolio"), "#", class:"menu-header" %></li>
               <li><%= link_to t(".about"), "#", class:"menu-header" %></li>
               <li><%= link_to t(".faq"), "#", class:"menu-header" %></li>
-              <li><%= link_to t(".login"), "#", class:"menu-header" %></li>
-              <li><%= link_to t(".sign_up"), "#", class:"menu-header" %></li>
+              <% if user_signed_in? %>
+                <li class="dropdown">
+                  <%= link_to t(".my_account"), class: "dropdown-toggle menu-header", data: {toggle: "dropdown"}%>
+                  <ul class="dropdown-menu">
+                    <li class="dropdown-inside"><%= link_to t(".edit"), "#" %></li>
+                    <li class="dropdown-inside"><%= link_to t(".logout"), destroy_user_session_path, method: :delete %></li>
+                  </ul>
+                </li>
+              <% else %>
+                <li><%= link_to t(".login"), "#", class:"menu-header" %></li>
+                <li><%= link_to t(".sign_up"), new_user_registration_path, class:"menu-header" %></li>
+              <% end %>
             </ul>
           </div>
         </div>
