--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,6 +13,19 @@
               <li><%= link_to t(".faq"), "#", class:"menu-header" %></li>
               <li><%= link_to t(".login"), "#", class:"menu-header" %></li>
               <li><%= link_to t(".sign_up"), "#", class:"menu-header" %></li>
+              <% if user_signed_in? %>
+                <li class="dropdown">
+                  <%= link_to "#", class: "dropdown-toggle", data: {toggle: "dropdown"}  do %>
+                    <i class="fa fa-user"></i><%= current_user.name %>
+                  <% end %>
+                  <ul class="dropdown-menu">
+                    <li><%= link_to t(".edit"), "#edituser", "data-toggle" => "modal", :class => 'btn btn-small edit' %></li>
+                    <li><%= link_to t(".logout"), destroy_user_session_path, method: :delete %></li>
+                  </ul>
+                </li>
+              <% else %>
+                <li><%= link_to t(".sign_in"), new_user_registration_path %></li>
+              <% end %>
             </ul>
           </div>
         </div>
